--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -28,5 +27,7 @@
     "slugify": "^1.6.6",
     "stripe": "^14.20.0",
     "uuid": "^9.0.1"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
