--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.6",
     "nodemailer": "^6.9.11",
+    "nodemon": "^3.1.0",
     "slugify": "^1.6.6",
     "stripe": "^14.20.0",
     "uuid": "^9.0.1"
   },
-  "devDependencies": {},
   "description": ""
 }
