--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemailer": "^6.9.11",
     "nodemon": "^3.1.0",
     "slugify": "^1.6.6",
+    "socket.io": "^4.7.5",
     "stripe": "^14.20.0",
     "uuid": "^9.0.1"
   },
